# my-workflows

./: .gitignore  NOTE.md  README.md
prefect-io/MY/: .gitignore  GOAL.md  README.md  pyproject.toml
prefect-io/MY/0_simple/: 01_single_node.py  02_multiple_nodes.py  03_fan_in_fan_out.py  04_if_condition.py  05_loop.py  README.md  task_vs_function.py
prefect-io/MY/10_deployment/: 01_simple_deployment.py  02_scheduled_deployment.py  03_parameterized_deployment.py  04_trigger_via_api.py  05_work_pool.py  QUICKSTART.md  README.md
prefect-io/MY/15_k8s/: Dockerfile  README.md  flow.py  pyproject.toml
prefect-io/MY/15_k8s/terraform/: .gitignore  main.tf  provider.tf  variables.tf
prefect-io/MY/1_basic/: 01_child_workflow.py  01_human_in_loop.py  02_human_in_loop.py  README.md
prefect-io/MY/2_intermediate/: 01_parallel_execution.py  01_retry_patterns.py  02_error_handling.py  README.md
prefect-io/MY/3_advanced/: 01_dynamic_task_mapping.py  02_conditional_branching.py  03_dynamic_subflows.py  04_data_driven_pipelines.py  README.md
prefect-io/MY/4_visualization/: 01_basic_visualization.py  02_ui_visualization.py  README.md
prefect-io/MY/5_AI/: 01_llm_in_task.py  02_openai_agent.py  03_react_agent_workflow.py  README.md
temporal-io/my-python/MY/: .env.example  GOAL.md  README.md  cleanup_all_workflows.py  pyproject.toml
temporal-io/my-python/MY/0_simple/: README.md  fan_in_fan_out.py  if_condition.py  loop.py  multiple_nodes.py  single_node.py
temporal-io/my-python/MY/0_simple/workflow_loop/: COMPLEX_WORKFLOW_README.md  QUICKSTART.md  README.md  complex_multi_loop.py  loop_with_retry.py  simple_loop.py  workflow_diagram.md
temporal-io/my-python/MY/0_simple_split/1_single_node/: README.md  api.py  start_workflow.py  worker.py  workflow_definitions.py
temporal-io/my-python/MY/0_simple_split/2_multiple_nodes/: README.md  api.py  start_workflow.py  worker.py  workflow_definitions.py
temporal-io/my-python/MY/15_k8s/: README.md
temporal-io/my-python/MY/15_k8s/starter/: pyproject.toml  starter.py
temporal-io/my-python/MY/15_k8s/worker/: .dockerignore  Dockerfile  pyproject.toml  worker.py
temporal-io/my-python/MY/15_k8s/worker/k8s/: configmap.yaml  deployment.yaml
temporal-io/my-python/MY/1_basic/: README.md  child_workflow.py  human_in_loop.py
temporal-io/my-python/MY/1_basic_split/1_child_workflow/: README.md  api.py  start_workflow.py  worker.py  workflow_definitions.py
temporal-io/my-python/MY/1_basic_split/2_human_in_loop/: README.md  api.py  start_workflow.py  worker.py  workflow_definitions.py
temporal-io/my-python/MY/2_intermediate/: INDEX.md  PATTERNS_EXPLAINED.md  QUICK_START.md  README.md  TROUBLESHOOTING.md
temporal-io/my-python/MY/2_intermediate/1_ecommerce_order_processing/: README.md  activities.py  api.py  models.py  pyproject.toml  worker.py  workflows.py
temporal-io/my-python/MY/2_intermediate/2_hr_approval_slack/: .env.example  README.md  activities.py  api.py  models.py  pyproject.toml  worker.py  workflows.py
temporal-io/my-python/MY/2_intermediate/3_marketing_campaign_user_actor/: README.md  activities.py  api.py  campaign_workflow.py  models.py  pyproject.toml  user_actor_workflow.py  worker.py
temporal-io/my-python/MY/3_advanced/: README.md  dynamic_activity_invocation.py  dynamic_child_workflows.py  dynamic_signals_queries.py  runtime_workflow_builder.py
temporal-io/my-python/MY/5_AI/: README.md  ai_agent_with_tools.py  react_agent.py  simple_llm_call.py
temporal-io/my-python/MY_AI_PROJECTS/claude_agent_sdk/ALL/: .gitignore  README.md  pyproject.toml
temporal-io/my-python/MY_AI_PROJECTS/claude_agent_sdk/ALL/p1_llm_call/: README.md  __init__.py  activities.py  run_worker.py  run_workflow.py  workflow.py
temporal-io/my-python/MY_AI_PROJECTS/claude_agent_sdk/ALL/p3_multi_agents/: __init__.py  (+5 more)
temporal-io/my-python/MY_AI_PROJECTS/claude_agent_sdk/p3_multi_agents_new/: .env  .gitignore  README.md  pyproject.toml  run_worker.py  run_workflow.py
temporal-io/my-python/MY_AI_PROJECTS/langchain/: .env.example  AGENT_PATTERN.md  CLAUDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TAVILY_MCP.md  UPDATES.md  pyproject.toml
temporal-io/my-python/MY_AI_PROJECTS/langchain/1_llm_call/: README.md  main.py
temporal-io/my-python/MY_AI_PROJECTS/langchain/2_agents/: README.md  main.py
temporal-io/my-python/MY_AI_PROJECTS/langchain/3_multi-agents/: README.md
temporal-io/my-python/MY_AI_PROJECTS/langchain/4_all/: README.md
temporal-io/my-python/MY_AI_PROJECTS/langchain/shared/: __init__.py
temporal-io/my-python/MY_AI_PROJECTS/openai_agent_sdk/: .env.example  .gitignore  ARCHITECTURE_IMPROVEMENTS.md  CLAUDE.md  README.md  pyproject.toml
temporal-io/my-python/MY_AI_PROJECTS/openai_agent_sdk/1_llm_call/: README.md  __init__.py  run_worker.py  run_workflow.py
temporal-io/my-python/MY_AI_PROJECTS/openai_agent_sdk/2_agents/: MEM0_REMOVED.md  MINIO_MCP_ENABLED.md  README.md  __init__.py  run_worker.py  run_workflow.py
temporal-io/my-python/MY_AI_PROJECTS/openai_agent_sdk/3_multi-agents/: README.md
temporal-io/my-python/MY_AI_PROJECTS/openai_agent_sdk/4_all/: README.md
temporal-io/my-python/MY_PROJECTS/1_human_in_loop_slack/: .env  .env.example  README.md  api.py  pyproject.toml  start_workflow.py  worker.py  workflow_definitions.py
temporal-io/my-python/MY_PROJECTS/2_complex_ai/: .env  QUICK_START.md  README.md  pyproject.toml  worker.py
temporal-io/my-python/MY_PROJECTS/2_complex_ai/global_api/: api.py
temporal-io/my-python/MY_PROJECTS/2_complex_ai/ui/: index.html  package-lock.json  package.json
temporal-io/my-python/MY_PROJECTS/2_complex_ai/workflow_code_analysis/: workflow_definitions.py
temporal-io/my-python/MY_PROJECTS/2_complex_ai/workflow_content_generation/: workflow_definitions.py
temporal-io/my-python/MY_PROJECTS/2_complex_ai/workflow_deep_research/: workflow_definitions.py
temporal-io/my-python/MY_PROJECTS/2_complex_ai/workflow_orchestrator/: __init__.py  workflow_definitions.py
(+136 files in other folders)
