[project]
name = "1-human-in-loop-slack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.18.2",
    "tabulate>=0.9.0",
    "python-dotenv>=1.2.1",
    "openai>=2.6.1",
    "openai-agents>=0.4.2",
    "slack-sdk>=3.37.0",
    "fastapi>=0.120.3",
    "aiohttp>=3.13.2",
]
