[project]
name = "marketing-campaign-user-actor"
version = "0.1.0"
description = "Marketing campaign manager demonstrating User Actor pattern for shared state"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
]

[tool.uv]
dev-dependencies = []
